--- a/Backened/package.json
+++ b/Backened/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "joi": "^17.12.2",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0"
